# mathMaster

./: .dockerignore  .gitignore  AGENTS.md  README.md  docker-compose.prod.yml  docker-compose.yml  verification.md
backend/: Dockerfile  Dockerfile.prod  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260409_0001_init_mathmaster.py  20260419_0002_add_solution_template.py  20260423_0003_add_chat_session_selected_model.py  20260424_0004_add_pipeline_task_queue.py  20260504_0005_expand_pipeline_task_stages.py  20260506_0006_add_users_audit_practice.py  20260511_0007_add_llm_config_center.py
backend/app/: __init__.py  main.py
backend/app/api/routes/: __init__.py  admin_llm.py  analysis.py  audit.py  auth.py  chat.py  dictionary.py  files.py  papers.py  practice.py  profile.py  questions.py  review.py  search.py  settings.py  tasks.py  templates.py  users.py
backend/app/core/: config.py
backend/app/db/: init_db.py  session.py
backend/app/models/: __init__.py  paper.py
backend/app/schemas/: auth.py  common.py  dictionary.py  llm.py  paper.py  practice.py  profile.py  question.py  search.py  template.py  user.py
backend/app/services/: analysis.py  audit.py  auth.py  chat.py  pipeline.py  pipeline_queue.py  practice.py  profile.py  review.py  review_state.py  search.py
backend/app/services/llm/: config.py  gateway.py
backend/app/services/mineu/: __init__.py  service.py
backend/app/services/prompts/: analysis_prompt.md  slice_prompt.md  (+3 more)
backend/app/utils/: answers.py  files.py
backend/tests/: test_storage_and_slice.py
(+47 files in other folders)
